deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-frontend
  labels:
    app: play-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play-frontend
  template:
    metadata:
      labels:
        app: play-frontend
    spec:
      containers:
        - name: play-frontend
          image: sylvanld/play-frontend:${DEPLOYED_VERSION}
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: play-frontend
spec:
  selector:
    app: play-frontend
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: play-frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: sylvan.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: play-frontend
              servicePort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-backend
  labels:
    app: play-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play-backend
  template:
    metadata:
      labels:
        app: play-backend
    spec:
      containers:
        - name: play-backend
          image: sylvanld/play-backend:${DEPLOYED_VERSION}
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: play-backend
spec:
  selector:
    app: play-backend
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: play-backend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: api.sylvan.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: play-backend
              servicePort: 80
